Trying to make package.json work

--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "MakerNodeUtils",
+  "name": "mnutils",
   "version": "0.0.1",
   "description": "Utilities for developing JavaScript apps. on the Intel Galileo",
-  "homepage": "https://github.com/adampasz/MakerNodeUtils",
-  "contributors": [
-    {
-      "name": "Adam Pasztory"
-    },
-    {
-      "name": "Noura Howell"
-    }
-  ],
+  "main": "galileo.js",
+  "dependencies": {
+    "cli-color": "~0.3.2",
+    "express": "~4.8.3",
+    "socket.io": "~1.0.6"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/adampasz/MakerNodeUtils.git"
   },
-  "dependencies": {
-    "cli-color": "~0.3.2",
-    "socket.io": "~1.0.6",
-    "express": "~4.8.3"
+  "keywords": [
+    "intel",
+    "galileo"
+  ],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/adampasz/MakerNodeUtils/issues"
   },
-  "devDependencies": {},
-  "engines": {
-    "node": ">=0.10.0"
-  }
+  "homepage": "https://github.com/adampasz/MakerNodeUtils"
 }
